# REZ-Intelligence

./: .env.example  .gitignore  .gitmodules  .lintstagedrc.js  .mcp.json  .prettierignore  .prettierrc  10X-QUALITY-PLAN.md  5-PERCENT.md  AUDIT-FIXES-MAY-2026.md  AUDIT-STRUCTURE.md  AUDIT.md  CHECKLIST.md  CLAUDE.md  COMPETITIVE-GAP-ANALYSIS.md  COMPLETION-REPORT-MAY-2026.md  COMPREHENSIVE-AUDIT-CROSS-REFERENCED.md  COMPREHENSIVE-AUDIT.md  COMPREHENSIVE-SERVICE-INDEX.md  CONNECT-MISSING.md  CONNECTIVITY-AUDIT.md  DEPLOY-COMMANDS.md  DEPLOY.md  DEPRECATION.md  DOCKER-AUDIT.md  DOCKER-DEPLOY.md  DONE.md  Dockerfile  ECOSYSTEM-INTEGRATION.md  GAPS-COMPETITIVE.md  GAPS.md  INTEGRATIONS.md  INTELLIGENCE-AUDIT-MAY-2026.md  INTELLIGENCE-GAP-REPORT.md  INTELLIGENCE-INTEGRATION-AUDIT-MAY-20.md  INVENTORY.md  LAUNCH-CHECKLIST.md  MASTER-SERVICE-INDEX.md  MCP-COMPREHENSIVE-PLAN.md  MCP-SETUP-GUIDE.md  (+57 more)
Cosmic-OS/: .env.example  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  ECOSYSTEM-INTEGRATION.md  FEATURES.md  README.md  deploy.sh  docker-compose.yml  package-lock.json  package.json  render.yaml
REZ-MIND-CLIENT/: .env.example  SPEC.md  package-lock.json  package.json  render.yaml
REZ-ab-testing/: .env.example  .gitignore  Dockerfile  README.md  SPEC.md  package-lock.json  package.json
REZ-ab-testing-service/: .env.example  Dockerfile  README.md  SPEC.md  package-lock.json  package.json  render.yaml
REZ-action-engine/: .env.example  Dockerfile  SPEC.md  package-lock.json  package.json  render.yaml  tsconfig.json
REZ-action-orchestrator/: README.md  package-lock.json  package.json
rez-python-sdk/: README.md  pyproject.toml
rez-python-sdk/rez_sdk/: __init__.py  client.py  examples.py  models.py  sync.py
(+3829 files in other folders)
